Changed package name into "CLCL (Portable)"
Because it is a portable package as its id says!

--- a/clcl.portable.nuspec
+++ b/clcl.portable.nuspec
@@ -10,7 +10,7 @@
     <!-- ============================== -->
 
     <!-- == SOFTWARE SPECIFIC SECTION == -->
-    <title>CLCL (Install)</title>
+    <title>CLCL (Portable)</title>
     <authors>Ohno Tomoaki</authors>
     <projectUrl>https://www.nakka.com/soft/clcl/index_eng.html</projectUrl>
     <iconUrl>https://www.nakka.com/soft/icon/clcl.png</iconUrl>
